@@ -1614,7 +1614,25 @@ multibuild-linux-powerpc64le: \
 multibuild-linux-s390x: multibuild-porting64-gcc # TODO
 
 # Linux/sparc64
-multibuild-linux-sparc64: multibuild-porting64-gcc # TODO
+multibuild-linux-sparc64: \
+  build-porting64-gcc-portability \
+  build-porting64-gcc-safety3 \
+  build-porting64-gcc-heapcodes \
+  build-porting64-gcc-one_free_bit_heapcodes-malloc \
+  build-porting64-gcc-one_free_bit_heapcodes-trivialmap \
+  build-porting64-gcc-generic64_heapcodes \
+  build-porting64-gcc-heapcodes-spvw_pages \
+  build-porting64-gcc-heapcodes-spvw_mixed_blocks \
+  build-porting64-gcc-spvw_pure_blocks \
+  build-porting64-gcc-limited_memory \
+  build-porting64-gcc-old_gc \
+  build-porting64-gcc-multithread_gc \
+  build-porting64-gcc-generational_gc-old_gc \
+  build-porting64-gcc-generational_gc-multithread_gc \
+  build-porting64-gcc-safety0 \
+  build-porting64-gcc-safety0-optimized \
+  build-porting64-gcc-debug_gcsafety \
+  build-porting64-gcc-debug_ari_asm
 
 # FreeBSD/x86_64
 multibuild-freebsd-x86_64: multibuild-porting64-gcc # TODO
